[gd_scene load_steps=5 format=3 uid="uid://dcxwnv1t5cd7w"]

[ext_resource type="Texture2D" uid="uid://1hclfbk5mqtr" path="res://Foney01.png" id="1_tumt4"]
[ext_resource type="Script" path="res://rupika.gd" id="2_spr4x"]
[ext_resource type="PackedScene" uid="uid://cieur5jm81jtr" path="res://rupika_gibarta.tscn" id="3_4t4vp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qnjl4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tumt4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="rupika" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_qnjl4")
script = ExtResource("2_spr4x")
projectile = ExtResource("3_4t4vp")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SpellTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="leftMarker" type="Marker2D" parent="."]
position = Vector2(-9, 0)

[node name="rightMarker" type="Marker2D" parent="."]
position = Vector2(9, 0)

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="SpellTimer" to="." method="_on_spell_timer_timeout"]
